portal/src/graphql/portal/CustomDomainListScreen.module.css
.widget {
  grid-column: 1 / span 8;

  @apply tablet:col-span-full;
}

.domainListColumn {
  display: flex;
  align-items: center;
}

.tableHeader {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 8px;
}

.modalBody {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.verificationDomainDescription {
  font-size: 12px;
  color: #605e5c;
  margin-top: 4px;
}

.actionButtonContainer {
  display: flex;
}

.actionButton {
  padding: 0;
  font-size: 13px;
  display: contents;
}

.divider {
  height: 15px;
  background-color: #edebe9;
  margin: 0 8px;
}

.activeStatus {
  @apply text-status-green;
}

